--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="redirect.html">
+                    <a href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">
                         <img src="assets/images/6b020c05ee78c56de4bf19733a85ebac-l6mlb1kvk9ut2t8ewlu8hht5aowe29rr3tf6oqzdbsaf37jsczaafwduw2a51fybwaaaaasuvork5cyii.png" alt="" style="height: 4.4rem;">
                     </a>
                 </span>
@@ -52,13 +52,13 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">
-                            Cotton</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">
+                            Cotton</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">
                             Baby</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">
                             Toddler</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">Kids</a>
-                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">Matching Outfits</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html">Maternity &amp; Nursing</a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">Kids</a>
+                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">Matching Outfits</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">Maternity &amp; Nursing</a></li></ul>
                 
                 
             </div>
@@ -75,15 +75,15 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-8 image-wrapper">
-                <a href="redirect.html"><img src="assets/images/e4d8ab0609a4fe50e3d104b6f920d4d8-6278c14dafa60.jpg" alt="Alo Yoga"></a>
+                <a href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')"><img src="assets/images/e4d8ab0609a4fe50e3d104b6f920d4d8-6278c14dafa60.jpg" alt="Alo Yoga"></a>
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><a href="redirect.html" class="text-primary"><strong>WELCOME TO&nbsp;</strong></a><strong><a href="redirect.html" class="text-primary"><br><b>Pat</b></a>Pat</strong></h1>
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><a href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')" class="text-primary"><strong>WELCOME TO&nbsp;</strong></a><strong><a href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')" class="text-primary"><br><b>Pat</b></a>Pat</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">Need help finding the perfect pair?
 <br>What are you shopping for today?<br></p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-black display-4" href="redirect.html">Shop USA Site</a>
-                        <a class="btn btn-black display-4" href="redirect.html">Another Country</a></div>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-black display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">Shop USA Site</a>
+                        <a class="btn btn-black display-4" href="redirect.html" onclick="gtag_report_conversion ('./redirect.html')">Another Country</a></div>
                 </div>
             </div>
         </div>
